se cambia img de assets por links

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -17,15 +17,15 @@
             </p>
 
             <div class="flex items-center mt-5">
-              <img class="h-9 mr-2 text-indigo-600" src="assets/house.png" alt="Chamba" />
+              <img class="h-9 mr-2 text-indigo-600" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012150/house_gvebwd.png" alt="Casa" />
                 <span class="text-lg">Culiacán,Sinaloa</span>
             </div>
             <div class="flex items-center mt-5">
-              <img class="h-9 mr-2 text-indigo-600" src="assets/chat.png" alt="Chamba" />
+              <img class="h-9 mr-2 text-indigo-600" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012147/chat_ec0e9z.png" alt="numero" />
                 <span class="text-lg">6672528776</span>
             </div>
             <div class="flex items-center mt-5 overflow-auto">
-              <img class="h-9 mr-2 text-indigo-600" src="assets/mailbox.png" alt="Chamba" />
+              <img class="h-9 mr-2 text-indigo-600" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012152/mailbox_bvc5bm.png" alt="mail" />
                 <span class="text-sm sm:text-lg">marcoantonio23rubio&#64;gmail.com</span>
             </div>
 
