--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -3,7 +3,7 @@
     <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
       <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-yellow-500">Laboral</span></h1>
   
-      <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="assets/reading.png" alt="Chamba" />
+      <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012157/reading_delwlq.png" alt="Chamba" />
   
       <p class="mt-10 text-2xl">Aquí observarás las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida <span class="text-yellow-400">escolar</span></p>
       <br>
