--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -58,7 +58,7 @@
       <div class="w-full xl:w-3/5 p-12 overflow-hidden">
         <img
           class="mx-auto w-full md:w-4/5 transform -rotate-6 transition hover:scale-105 duration-700 ease-in-out hover:rotate-6"
-          src="assets/imagenlanding.webp"
+          src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717011997/imagenlanding_sahffw.webp"
         />
       </div>
 
