--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -3,7 +3,7 @@
   <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
     <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-green-500">Laboral</span></h1>
 
-    <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="assets/training.png" alt="Chamba" />
+    <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012159/training_sa4c51.png" alt="Chamba" />
 
     <p class="mt-10 text-xl">Aquí encontrarás los diferentes <span class="text-green-400">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-400">actividades</span> que desarrollé, las <span class="text-green-400">fortalezas</span> que obtuve gracias a ellos y, por último, las circunstancias que llevaron a la finalización de cada relación laboral.</p>
     <br>
