--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -6,7 +6,7 @@
             <div class="flex-shrink-0 flex items-center">
               <img
                 class="h-10 w-auto cursor-pointer"
-                src="assets/logo3.png"
+                src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012152/logo3_eybwsk.png"
                 alt="Workflow logo"
                 (click)="enviarAlMenu()"
               />
@@ -124,7 +124,7 @@
                 >
                   <img
                     class="h-8 w-8 rounded-full"
-                    src="assets/young-man.png"
+                    src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012160/young-man_wmt5wr.png"
                     alt
                   />
                 </button>
@@ -147,7 +147,7 @@
       >
         <img
           class="h-40 w-40 rounded-full"
-          src="assets/young-man.png"
+          src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012160/young-man_wmt5wr.png"
           alt="Perfil"
         />
       </button>
