--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -16,7 +16,7 @@
 
 <body
   class="leading-normal tracking-normal text-indigo-400 bg-cover bg-fixed min-h-screen"
-  style="background-image: url('assets/header.png')"
+  style="background-image: url('https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012149/header_g8mhsv.png')"
 >
   <div class="h-full">
     <!--Main-->
