--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
         <h2 class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-300 bg-clip-text text-3xl font-extrabold text-transparent sm:text-5xl leading-normal">Hola , mi nombre es Marco Rubio</h2>
         <br>
         <p class="mt-4 text-gray-300 text-2xl">
-          He elaborado este curriculum con el propósito de asegurar una oportunidad para crecer como científico de datos. Estoy emocionado por la posibilidad de ser considerado para este puesto.
+          He elaborado este curriculum con el propósito de asegurar una oportunidad para desarrollarme como cientifico de datos. Estoy emocionado por la posibilidad de ser considerado para este puesto.
         </p>
         <br>
       </div>
