se agregan imagenes

--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -124,7 +124,7 @@
                 >
                   <img
                     class="h-8 w-8 rounded-full"
-                    src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012160/young-man_wmt5wr.png"
+                    src="https://res.cloudinary.com/dvzucfpbk/image/upload/ar_1:1,b_rgb:262c35,bo_0px_solid_rgb:000000,c_fill,g_auto,r_max,w_1000/v1717195327/perfil2_a9uh7n.jpg"
                     alt
                   />
                 </button>
@@ -147,7 +147,7 @@
       >
         <img
           class="h-40 w-40 rounded-full"
-          src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012160/young-man_wmt5wr.png"
+          src="https://res.cloudinary.com/dvzucfpbk/image/upload/ar_1:1,b_rgb:262c35,bo_0px_solid_rgb:000000,c_fill,g_auto,r_max,w_1000/v1717195327/perfil2_a9uh7n.jpg"
           alt="Perfil"
         />
       </button>
@@ -244,7 +244,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mx-2">
         <div *ngFor="let item of items" class="flex-1 text-center px-4 py-2 m-1 relative">
           <img
-            class="w-full h-5/6 cursor-pointer transition-opacity duration-300 hover:opacity-60"
+            class="w-full h-full w-full object-cover cursor-pointer transition-opacity duration-300 hover:opacity-60"
             src="{{item.imagen}}"
             (click)="abrirModal(item)"
           />
