se genera cambio de lenguaje basico en el landing

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -37,10 +37,13 @@
           </span>
           a mi Currículum
         </h1>
+        <button (click)="changeLanguage('es')">Español</button>
+        <button (click)="changeLanguage('en')">English</button>
         <p
+          data-i18n="greeting"
           class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left"
         >
-          Esto es un resumen de mis habilidades y experiencias desarrollado con Angular
+          hola
         </p>
 
           <div class="flex justify-center pt-4">
