--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -23,36 +23,62 @@
     <div
       class="container pt-32 md:pt-18 mx-auto flex flex-wrap flex-col md:flex-row items-center"
     >
+         <!-- Dropdown de idioma en la esquina superior derecha -->
+         <div class="absolute top-4 left-0 mt-4 ml-2">
+          <div class="relative inline-block text-left">
+            <div class="flex items-center">
+              <span class="mr-1 text-lg font-bold text-white">Language:</span>
+              <button (click)="toggleDropdown()" type="button" class="inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-100 focus:ring-indigo-500" id="options-menu" aria-haspopup="true" aria-expanded="true">
+                {{lenguaje}}
+                <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </div>
+  
+            <div class="origin-top-left absolute left-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5">
+              <div
+              [style.display]="showDropdown ? 'block' : 'none'" 
+              class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
+                <a class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" (click)="changeLanguage('es')">Español</a>
+                <a class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem" (click)="changeLanguage('en')">English</a>
+              </div>
+            </div>
+          </div>
+        </div>
       <!--Columna Izquierda-->
       <div
         class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden"
       >
         <h1
+          
           class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center md:text-left"
         >
           <span
+            data-i18n="bienvenido"
             class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500"
           >
             Bienvenido
           </span>
-          a mi Currículum
+          <span data-i18n="curriculum">
+            a mi Currículum
+          </span>
         </h1>
-        <button (click)="changeLanguage('es')">Español</button>
-        <button (click)="changeLanguage('en')">English</button>
         <p
-          data-i18n="greeting"
+          data-i18n="resumen"
           class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left"
         >
-          hola
+          Esto es un resumen de mis habilidades y experiencias desarrollado con Angular
         </p>
 
           <div class="flex justify-center pt-4">
             <button
+            data-i18n="empezemos"
               class="ml-1 mb-4 bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
               type="button"
               (click)="enviarAlMenu()"
             >
-              Empezemos
+              Empecemos
             </button>
           </div>
       </div>
