--- a/src/app/experiencia/experiencia.component.html
+++ b/src/app/experiencia/experiencia.component.html
@@ -1,11 +1,11 @@
 <div class="flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
 
   <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
-    <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-green-500">Laboral</span></h1>
+    <h1 data-i18n="tit_exp" class="font-fira mb-8 text-4xl font-bold sm:mt-12"></h1>
 
     <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012159/training_sa4c51.png" alt="Chamba" />
 
-    <p class="mt-10 text-xl">Aquí encontrarás los diferentes <span class="text-green-400">empleos</span> que he tenido a lo largo del tiempo, además de explicar las <span class="text-green-400">actividades</span> que desarrollé, las <span class="text-green-400">fortalezas</span> que obtuve gracias a ellos y, por último, las circunstancias que llevaron a la finalización de cada relación laboral.</p>
+    <p data-i18n="empleos" class="mt-10 text-xl"></p>
     <br>
 
     <section *ngFor="let item of items; let i = index" class="mt-4 mr-30 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg">
@@ -39,10 +39,11 @@
 
     <div class="mt-12 text-center">
       <button
+        data-i18n="regresar"
         (click)="enviarAlMenu()"
         class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none"
       >
-        Regresar
+        
       </button>
     </div>
   </article>
