--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -4,10 +4,10 @@
 
         <div class="transition duration-500 ease-in-out transform scale-100 translate-x-0 translate-y-0 opacity-100">
             <div class="mb-12 space-y-5 md:mb-16 md:text-center">
-                <h1 class="mb-5 text-3xl font-semibold text-white md:text-center md:text-5xl">
+                <h1 data-i18n="cursos1" class="mb-5 text-3xl font-semibold text-white md:text-center md:text-5xl">
                     Cursos y <span class="text-pink-400">certificaciones</span>
                 </h1>
-                <p class="text-xl text-gray-100 md:text-center md:text-2xl">
+                <p data-i18n="cursos2" class="text-xl text-gray-100 md:text-center md:text-2xl">
                     En esta ruta de <span class="text-pink-400">GitHub</span> encontrarás los diplomas y certificados de los <span class="text-pink-400">cursos</span> que he realizado.
                 </p>
                 <a
@@ -36,10 +36,10 @@
                                         src="{{item.imagen}}"
                                         class="w-12 h-12 bg-center bg-cover border rounded-full" alt="Kanye West">
                                     <div>
-                                        <h3 class="text-lg font-semibold text-white">{{item.titulo}}</h3>
+                                        <h3 attr.data-i18n="{{item.titulo}}" class="text-lg font-semibold text-white"></h3>
                                     </div>
                                 </div>
-                                <p class="leading-normal text-gray-300 text-lg">{{item.descripcion}}</p>
+                                <p class="leading-normal text-gray-300 text-lg" attr.data-i18n="{{item.descripcion}}"></p>
                             </div>
                         </a>
                     </div>
@@ -59,10 +59,10 @@
                                         src="{{item.imagen}}"
                                         class="w-12 h-12 bg-center bg-cover border rounded-full" alt="Parag Agrawal">
                                     <div>
-                                        <h3 class="text-lg font-semibold text-white">{{item.titulo}}</h3>
+                                        <h3 class="text-lg font-semibold text-white" attr.data-i18n="{{item.titulo}}" ></h3>
                                     </div>
                                 </div>
-                                <p class="leading-normal text-gray-300 text-lg">{{item.descripcion}}</p>
+                                <p class="leading-normal text-gray-300 text-lg" attr.data-i18n="{{item.descripcion}}"></p>
                             </div>
                         </a>
                     </div>
@@ -81,10 +81,10 @@
                                         src="{{item.imagen}}"
                                         class="w-12 h-12 bg-center bg-cover border rounded-full" alt="Satya Nadella">
                                     <div>
-                                        <h3 class="text-lg font-semibold text-white">{{item.titulo}}</h3>
+                                        <h3 class="text-lg font-semibold text-white" attr.data-i18n="{{item.titulo}}" ></h3>
                                     </div>
                                 </div>
-                                <p class="leading-normal text-gray-300 text-lg">{{item.descripcion}}</p>
+                                <p class="leading-normal text-gray-300 text-lg" attr.data-i18n="{{item.descripcion}}"></p>
                             </div>
                         </a>
                     </div>
@@ -94,6 +94,7 @@
 
         <div class="flex justify-center mt-4">
             <button
+            data-i18n="regresar"
               (click)="enviarAlMenu()"
               class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-md font-medium text-white hover:bg-blue-800 focus:outline-none"
             >
