--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,33 +1,32 @@
 <div class="flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify">
 
     <article class="font-fira mx-auto max-w-5xl p-4 selection:bg-black text-gray-200 selection:text-white flex-grow">
-      <h1 class="font-fira mb-8 text-4xl font-bold sm:mt-12">Experiencia <span class="text-yellow-500">Laboral</span></h1>
+      <h1  class="font-fira mb-8 text-4xl font-bold sm:mt-12"><span data-i18n="edu" class="text-yellow-500">Educación</span></h1>
   
       <img class="float-right w-32 md:w-60 rounded-lg -mt-8 ml-12" src="https://res.cloudinary.com/dvzucfpbk/image/upload/v1717012157/reading_delwlq.png" alt="Chamba" />
   
-      <p class="mt-10 text-2xl">Aquí observarás las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida <span class="text-yellow-400">escolar</span></p>
+      <p class="mt-10 text-2xl" data-i18n="edutext">Aquí observarás las diferentes <span class="text-yellow-400">instituciones</span> a las que he asistido durante mi vida <span class="text-yellow-400">escolar</span></p>
       <br>
   
       <section *ngFor="let item of items" class="mt-4 bg-gray-800 dark:bg-gray-800 shadow-lg p-6 rounded-lg max-w-7xl ">
         <details class="group">
           <summary class="flex justify-between items-center cursor-pointer list-none">
-            <h2 class="text-lg md:text-3xl font-bold ">{{item.escuela}} <span class="text-base md:text-2xl font-bold ">{{item.fecha}}</span></h2>
+            <h2 class="text-lg md:text-3xl font-bold ">{{item.escuela}} <span attr.data-i18n="{{item.fecha}}" class="text-base md:text-2xl font-bold "></span></h2>
             <span class="transition group-open:rotate-180">
               <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
             </span>
           </summary>
           <ul class="mt-6 text-sm md:text-lg list-disc list-outside ml-6 group-open:animate-fadeIn">
-            <li *ngFor="let punto of item.descripcion">{{punto}}</li>
+            <li *ngFor="let punto of item.descripcion" attr.data-i18n="{{punto}}"></li>
           <li *ngFor="let acordeonItem of item.acordeon"> 
               <details class="group mt-1">
                 <summary class="flex justify-between items-center cursor-pointer list-none">
-                  <span>{{acordeonItem.titulo}}</span>
+                  <span attr.data-i18n="{{acordeonItem.titulo}}"></span>
                   <span class="transition">
                     <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path></svg>
                   </span>
                 </summary>
-                <p class="mt-2 text-sm md:text-base group-open:animate-fadeIn">
-                  {{acordeonItem.texto}}
+                <p class="mt-2 text-sm md:text-base group-open:animate-fadeIn" attr.data-i18n="{{acordeonItem.texto}}">
                 </p>
               </details>
             </li>
@@ -38,6 +37,7 @@
       <div class="mt-12 text-center">
         <button
           (click)="enviarAlMenu()"
+          data-i18n="regresar"
           class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none"
         >
           Regresar
