--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -3,8 +3,8 @@
         <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
             <div class="mb-4 flex items-center justify-center gap-8 sm:mb-8 md:mb-12">
                 <div class="mb-4 flex flex-col items-start justify-center gap-4 sm:mb-4 md:mb-2">
-                    <h2 class="text-2xl font-bold text-gray-200 lg:text-5xl"><span class="text-red-400">Proyectos</span> personales</h2>
-                    <p class="max-w-screen-md text-gray-200 text-md lg:text-2xl md:block">
+                    <h2 data-i18n="tep" class="text-2xl font-bold text-gray-200 lg:text-5xl"><span class="text-red-400">Proyectos</span> personales</h2>
+                    <p data-i18n="tep1" class="max-w-screen-md text-gray-200 text-md lg:text-2xl md:block">
                         Aquí están la mayoría de trabajos <span class="text-red-400">propios</span> que he realizado. Dando <span class="text-red-400">clic</span> en la imagen, verás el repositorio donde se encuentran alojados y la <span class="text-red-400">descripción</span> de cada uno.
                     </p>
                 </div>
@@ -21,20 +21,21 @@
                         class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50">
                     </div>
                     <div class="absolute inset-0 flex items-center text-sm justify-center opacity-0 group-hover:opacity-100 transition duration-200 p-2">
-                        <span class="text-white text-lg">{{item.descripcion}}</span>
+                        <span class="text-white text-lg" attr.data-i18n="{{item.descripcion}}"></span>
                     </div>
     
-                    <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-3xl">{{item.titulo}}</span>
+                    <span attr.data-i18n="{{item.titulo}}" class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-3xl"></span>
                 </a>
                 <!-- image - end -->
     
             </div>
             <div class="flex justify-center mt-4">
                 <button
+                data-i18n="regresar"
                   (click)="enviarAlMenu()"
                   class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-md font-medium text-white hover:bg-blue-800 focus:outline-none"
                 >
-                  Regresar
+                  
                 </button>
             </div>
         </div>
