--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -2,17 +2,21 @@
 <div *ngIf="loading" class="fixed top-0 left-0 z-50 w-screen h-screen flex items-center justify-center bg-gray-800 bg-opacity-50">
   <div class="flex flex-col items-center justify-center">
     <div class="w-32 h-32 border-t-8 border-blue-500 rounded-full animate-spin"></div>
-    <p class="mt-4 text-white text-2xl">Cargando...</p>
+    <p class="mt-4 text-white text-2xl">Loading...</p>
   </div>
 </div>
 <div class="flex flex-col min-h-screen bg-gray-900 dark:bg-gray-900 text-justify text-gray-200">
   <div class="max-w-screen-lg mx-auto p-5">
     <div class="grid grid-cols-1 md:grid-cols-16 border">
         <div class="bg-gray-900 md:col-span-4 p-10 text-white">
-            <h3 class="text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight">
+            <h3
+            data-i18n="conta" 
+            class="text-3xl sm:text-4xl leading-normal font-extrabold tracking-tight">
                 Pongámonos en <span class="text-indigo-400">Contacto</span>
             </h3>
-            <p class="mt-4 leading-7 text-gray-200 text-2xl">
+            <p
+            data-i18n="conta1" 
+            class="mt-4 leading-7 text-gray-200 text-2xl">
               Aquí encontrarás mis datos, además puedes utilizar el formulario para enviarme un Mensaje.
             </p>
 
@@ -42,7 +46,9 @@
           </fieldset>
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                    <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="nombre">
+                    <label
+                    data-i18n="nombre" 
+                    class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="nombre">
                         Nombre
                     </label>
                     <input
@@ -52,7 +58,9 @@
                       type="text" pInputText [(ngModel)]="nombre" placeholder="Juan" >
                 </div>
                 <div class="w-full md:w-1/2 px-3">
-                    <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="nombre">
+                    <label
+                    data-i18n="Apellido" 
+                    class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="nombre">
                         Apellido
                     </label>
                     <input
@@ -64,8 +72,10 @@
             </div>
             <div *ngIf="botonselecto === 'correo'" class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3">
-                    <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="nombre">
-                        Correo electrónico
+                    <label
+                     
+                    class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="nombre">
+                        Email
                     </label>
                     <input
                         required
@@ -73,16 +83,17 @@
                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                         type="email" pInputText [(ngModel)]="email" placeholder="juanperez@empresa.com" #emailField="ngModel">
-                        <span *ngIf="emailField.invalid && (emailField.dirty || emailField.touched)" class="text-red-500">
-                          Por favor, introduce un correo electrónico válido.
+                        <span *ngIf="emailField.invalid && (emailField.dirty || emailField.touched)"
+                        class="text-red-500">
                         </span>
                 </div>
             </div>
 
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3">
-                    <label class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="mensaje">
-                        Tu mensaje:
+                    <label 
+                    data-i18n="mensaje"
+                    class="block uppercase tracking-wide text-gray-200 text-xs font-bold mb-2" for="mensaje">
                     </label>
                     <textarea
                         required
@@ -92,15 +103,17 @@
                 </div>
                 <div class="flex justify-between w-full px-3">
                     <button
+                    data-i18n="enviar"
                         class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
                         type="submit">
-                        Enviar mensaje
+                        
                     </button>
                     <button
+                    data-i18n="regresar"
                         (click)="regresar()"
                         class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
                         type="button">
-                        Regresar
+                        
                     </button>
                 </div>
             </div>
