--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -155,8 +155,9 @@
           <span class="text-gray-100 text-3xl mr-2">Mar_9802_rubio</span>
           <span class="text-base font-semibold text-gray-100 mr-2">
             <button
+            data-i18n="perfil"
               class="bg-gray-600 hover:bg-blue-500 text-gray-100 font-semibold hover:text-white py-2 px-4 border border-gray-600 hover:border-transparent rounded"
-            >Ver Perfil</button>
+            ></button>
           </span>
           <span class="text-base font-semibold text-gray-700">
             <button
@@ -193,7 +194,8 @@
           <div class="mt-4">
             <p
               class="text-base font-medium text-blue-500 mr-2 mb-3"
-            >#Desarrollador #Financiero #Python #Gamer #Exercise</p>
+              data-i18n="infoperfil"
+            ></p>
             <a
               href="https://www.linkedin.com/in/marco-antonio-rubio-martinez-77ab3716a/"
               class="text-base font-medium text-gray-100 hover:text-blue-500 hover:underline mr-2"
@@ -202,7 +204,8 @@
               https://www.linkedin.com/in/marco-antonio-rubio-martinez-77ab3716a/
             </a>
           </div>
-          <button (click)="enviarAlMenu()" class="mt-3 bg-gray-600 hover:bg-blue-500 text-gray-100 font-semibold hover:text-white py-2 px-4 border border-gray-600 hover:border-transparent rounded">Regresar</button>
+          <button (click)="enviarAlMenu()" class="mt-3 bg-gray-600 hover:bg-blue-500 text-gray-100 font-semibold hover:text-white py-2 px-4 border border-gray-600 hover:border-transparent rounded"
+          data-i18n="regresar"></button>
         </div>
     </div>
 
@@ -248,7 +251,8 @@
           src="{{item.imagen}}"
           
         />
-        <p class="cursor-pointer absolute inset-0 flex items-center justify-center text-white text-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300">Ver más</p>
+        <p class="cursor-pointer absolute inset-0 flex items-center justify-center text-white text-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+        data-i18n="vermas"></p>
       </div>
       </div>
 
@@ -273,9 +277,11 @@
                 class="h-32 w-full object-cover md:h-full"
               />
               <div class="p-4 text-center sm:p-6 md:col-span-2 lg:p-8">
-                <p class="text-2xl font-semibold uppercase tracking-widest">{{itemSeleccionado?.titulo}}</p>
+                <p *ngIf="idioma === 'es'" class="text-2xl font-semibold uppercase tracking-widest">{{itemSeleccionado?.titulo}}</p>
+                <p *ngIf="idioma === 'en'" class="text-2xl font-semibold uppercase tracking-widest">{{itemSeleccionado?.tituloi}}</p>
                 <p class="mt-6">
-                  <span class="mt-2 text-lg">{{itemSeleccionado?.texto}}</span>
+                  <span *ngIf="idioma === 'es'" class="mt-2 text-lg">{{itemSeleccionado?.texto}}</span>
+                  <span *ngIf="idioma === 'en'" class="mt-2 text-lg">{{itemSeleccionado?.textoi}}</span>
                 </p>
               </div>
             </section>
