--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="loading" class="fixed top-0 left-0 z-50 w-screen h-screen flex items-center justify-center bg-gray-800 bg-opacity-50">
+    <div class="flex flex-col items-center justify-center">
+      <div class="w-32 h-32 border-t-8 border-blue-500 rounded-full animate-spin"></div>
+      <p class="mt-4 text-white text-2xl">Loading...</p>
+    </div>
+  </div>
 <div class="flex flex-col min-h-screen bg-gray-800 text-justify">
     <div class="h-full py-6 sm:py-8 lg:py-12">
         <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
