--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="loading" class="fixed top-0 left-0 z-50 w-screen h-screen flex items-center justify-center bg-gray-800 bg-opacity-50">
+  <div class="flex flex-col items-center justify-center">
+    <div class="w-32 h-32 border-t-8 border-blue-500 rounded-full animate-spin"></div>
+    <p class="mt-4 text-white text-2xl">Loading...</p>
+  </div>
+</div>
 <div class="flex flex-col bg-gray-900 min-h-screen w-full">
     <nav class="bg-gray-800 shadow px-48 border-b border-gray-400">
       <div class="max-w-7xl mx-auto px-2 sm:px-4 lg:px-8">
