--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -41,7 +41,7 @@
               WhatsApp
             </button>
             <button type="button" value="correo" (click)="botonSeleccionado('correo')" [ngClass]="{'selected': botonselecto === 'correo'}" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-e-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
-              Correo
+              Email
             </button>
           </fieldset>
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -55,7 +55,7 @@
                       required
                       name="nombre"
                       class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                      type="text" pInputText [(ngModel)]="nombre" placeholder="Juan" >
+                      type="text" pInputText [(ngModel)]="nombre" placeholder="Juan">
                 </div>
                 <div class="w-full md:w-1/2 px-3">
                     <label
@@ -106,14 +106,14 @@
                     data-i18n="enviar"
                         class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
                         type="submit">
-                        
+                        Enviar mensaje
                     </button>
                     <button
                     data-i18n="regresar"
                         (click)="regresar()"
                         class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
                         type="button">
-                        
+                        Regresar
                     </button>
                 </div>
             </div>
