--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,10 @@
   <section class="flex flex-col bg-gray-900 text-white min-h-screen w-full">
     <div class="flex-grow mx-auto max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
       <div class="text-center">
-        <h2 data-i18n="saludo" class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-300 bg-clip-text text-3xl font-extrabold text-transparent sm:text-5xl leading-normal"></h2>
+        <h2 data-i18n="saludo" class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-300 bg-clip-text text-3xl font-extrabold text-transparent sm:text-5xl leading-normal"> Hola , mi nombre es Marco Rubio</h2>
         <br>
         <p data-i18n="presentacion" class="mt-4 text-gray-300 text-2xl">
+          He elaborado este currículum con el propósito de asegurar una oportunidad para desarrollarme como analista de datos. Estoy emocionado por la posibilidad de ser considerado para este puesto.
         </p>
         <br>
       </div>
@@ -19,7 +20,12 @@
         class="size-10 text-pink-500"
         alt="{{item.alt}}"
       />
-          <h2 attr.data-i18n="{{item.titulo}}" class="mt-4 text-xl font-bold text-white text-left" ></h2>
+          <h2 *ngIf="idioma === 'es'" class="mt-4 text-xl font-bold text-white text-left" >
+          {{item.titulo}} 
+          </h2>
+          <h2 *ngIf="idioma === 'en'" class="mt-4 text-xl font-bold text-white text-left" >
+            {{item.tituloIngles}} 
+          </h2>
       </button>
       </div>
       <div class="mt-12 text-center">
@@ -30,6 +36,7 @@
           class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none"
           data-i18n="descarga"
         >
+        Descargar CV
         </button>
       </div>
     </div>
