--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -17,7 +17,7 @@
             </div>
     
             <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
-                <!-- image - start -->
+
                 <a *ngFor="let item of items" 
                     href="{{item.link}}"
                     target="_blank"
@@ -27,13 +27,16 @@
                         class="pointer-events-none absolute inset-0 bg-gradient-to-t from-gray-800 via-transparent to-transparent opacity-50">
                     </div>
                     <div class="absolute inset-0 flex items-center text-sm justify-center opacity-0 group-hover:opacity-100 transition duration-200 p-2">
-                        <span class="text-white text-lg" attr.data-i18n="{{item.descripcion}}"></span>
+                        <span *ngIf="idioma==='es'" class="text-white text-lg">{{item.descripcion}}</span>
+                        <span *ngIf="idioma==='en'" class="text-white text-lg">{{item.descripcioningles}}</span>
                     </div>
     
-                    <span attr.data-i18n="{{item.titulo}}" class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-3xl"></span>
+                    <span *ngIf="idioma==='es'" class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-3xl">{{item.titulo}}
+                    </span>
+                    <span *ngIf="idioma==='en'" class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-3xl">{{item.tituloingles}}
+                    </span>
                 </a>
-                <!-- image - end -->
-    
+
             </div>
             <div class="flex justify-center mt-4">
                 <button
@@ -41,7 +44,7 @@
                   (click)="enviarAlMenu()"
                   class="transform hover:scale-105 hover:brightness-125 transition-all duration-200 inline-block rounded bg-blue-500 px-12 py-3 text-md font-medium text-white hover:bg-blue-800 focus:outline-none"
                 >
-                  
+                Regresar
                 </button>
             </div>
         </div>
