--- a/src/app/sobremi/sobremi.component.html
+++ b/src/app/sobremi/sobremi.component.html
@@ -211,7 +211,7 @@
             </a>
           </div>
           <button (click)="enviarAlMenu()" class="mt-3 bg-gray-600 hover:bg-blue-500 text-gray-100 font-semibold hover:text-white py-2 px-4 border border-gray-600 hover:border-transparent rounded"
-          data-i18n="regresar"></button>
+          data-i18n="regresar"> Regresar </button>
         </div>
     </div>
 
@@ -258,7 +258,7 @@
           
         />
         <p class="cursor-pointer absolute inset-0 flex items-center justify-center text-white text-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300"
-        data-i18n="vermas"></p>
+        data-i18n="vermas"> Ver más</p>
       </div>
       </div>
 
